# troubadour

./: .gitignore  Cargo.toml  notes  readme.md  save
freya_ui/: Cargo.toml
freya_ui/src/: main.rs  player_ref.rs
src/: main.rs  operations.rs  player.rs  terminal_helpers.rs  ui_definition.rs
terminal_ui/: Cargo.toml
terminal_ui/src/: main.rs  terminal_helpers.rs  ui_definition.rs
troubadour_lib/: Cargo.toml
troubadour_lib/src/: error.rs  lib.rs  player.rs
troubadour_lib/src/player/: decoder.rs  mod.rs
