[package]
name = "troubadour-freya"
version = "0.1.0"
edition = "2021"
authors = ["J.P. Hagedoorn AKA Dexterdy Krataigos"]
license = "GPL-3.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.76"
dioxus = { version = "0.6.3", features = [
    "macro",
    "hooks",
], default-features = false }
freya = { version = "0.2.2", features = ["devtools"] }
indexmap = { version = "2.2.6" }
rdf = "0.1.4"
rfd = "0.15.2"
troubadour_lib = { path = "../troubadour_lib" }
