[package]
name = "troubadour"
version = "0.1.0"
edition = "2021"
authors = ["J.P. Hagedoorn AKA Dexterdy Krataigos"]
license = "GPL-3.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.76"
clap = { version = "4.5.31", features = ["derive"] }
shlex = "1.3.0"
const_format = "0.2.34"
fomat-macros = "0.3.2"
duration-human = "0.1.10"
duration-str = { version = "0.13.0", default-features = false }
rustyline = "13.0.0"
indexmap = { version = "2.7.1" }
troubadour_lib = { path = "../troubadour_lib" }
