[package]
name = "troubadour_lib"
version = "0.1.0"
edition = "2021"
authors = ["J.P. Hagedoorn AKA Dexterdy Krataigos"]
license = "GPL-3.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rodio = "0.20.1"
paste = "1.0.14"
serde_json = "1.0.140"
serde = { version = "1.0.218", features = ["derive"] }
indexmap = { version = "2.7.1", features = ["serde"] }
thiserror = "2.0.12"
anyhow = "1.0.97"
